# HaSeerr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: lint.yml  tests.yml  validate.yml
custom_components/haseerr/: __init__.py  config_flow.py  const.py  hub.py  intent.py  manifest.json  matching.py  options_flow.py  sensor.py  services.yaml  services_impl.py  webhook.py
custom_components/haseerr/intents/: bg.yaml  en.yaml
custom_components/haseerr/translations/: bg.json  en.json
custom_components/haseerr/www/: haseerr-card.js
docs/: automations-examples.yaml  design.md  development.md  lovelace-example.yaml  overview-dashboard.md  voice.md  webhook.md
tests/: conftest.py  test_config_flow.py  test_hub.py  test_integration.py  test_intent.py  test_matching.py  test_options_flow.py  test_sensor.py  test_services.py  test_webhook.py
tests/fixtures/seerr/: quota.json  request_movie.json  request_tv.json  search.json  search_music.json  status.json  users.json
